turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:19: error: value magneta is not a member of object java.awt.Color
  setCouleur(Color.magneta)
                   ^